--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -16,19 +16,21 @@
                     <div class="input-field col s12">
                         <input id="email" autocomplete="username" type="email" name="email" class="validate" required>
                         <label for="email">Email</label>
-                        <span class="helper-text" data-error="Введите почту" data-success=""></span>
+                        <span class="helper-text" data-error="Введите почту" data-success="Успешно">Введите почту</span>
                     </div>
                     <div class="input-field col s12">
                         <input id="password" autocomplete="current-password" type="password" name="password"
                                class="validate" required>
                         <label for="password">Password</label>
-                        <span class="helper-text" data-error="Введите пароль" data-success=""></span>
+                        <span class="helper-text" data-error="Введите пароль" data-success="Успешно">Введите пароль</span>
 
                     </div>
-                    <p class=""><a href="/reset">Восстановить пароль</a></p>
+                    <div>
                     <button id="loginBtn" class="btn waves-effect waves-light" type="submit">Войти
                         <i class="material-icons right"></i>
                     </button>
+                        <p class=""><a href="/reset">Восстановить пароль</a></p>
+                    </div>
 
                 </div>
             </div>
@@ -42,13 +44,13 @@
                     <div class="input-field col s8">
                         <input id="rlogin" type="text" autocomplete="username" name="login" class="validate" required>
                         <label for="rlogin">Login</label>
-                        <span class="helper-text" data-error="Введите Login" data-success=""></span>
+                        <span class="helper-text" data-error="Введите Login" data-success="Успешно">Введите Login</span>
                     </div>
                     <div class="input-field col s8">
                         <input id="rpassword" type="password" autocomplete="current-password" name="password"
                                class="validate" required>
                         <label for="rpassword">Пароль</label>
-                        <span class="helper-text" data-error="Введите пароль" data-success=""></span>
+                        <span class="helper-text" data-error="Введите пароль" data-success="Успешно">Введите пароль</span>
                     </div>
 <!--                    <div class="input-field col s6">-->
 <!--                        <input id="rpassword2" type="password2" autocomplete="current-password" name="password"-->
@@ -59,7 +61,7 @@
                     <div class="input-field col s8">
                         <input id="remail" type="email" name="email" class="validate" required>
                         <label for="remail">Email</label>
-                        <span class="helper-text" data-error="Введите почту" data-success=""></span>
+                        <span class="helper-text" data-error="Введите почту" data-success="Успешно">Введите почту</span>
                     </div>
                     <button class="btn waves-effect waves-light" type="submit" name="action">Зарегитрироваться
                         <i class="material-icons right"></i>
