--- a/views/work.hbs
+++ b/views/work.hbs
@@ -98,7 +98,7 @@
         padding: 3px 5px 4px 0;
         color: #444;
         background: aliceblue;
-        position: fixed;
+        position: relative;
         bottom: 0;
         width: 101.5%;
         opacity: 0.8;
@@ -126,7 +126,7 @@
             margin-top: 6%;
         }
         .block--work--disc {
-            position: fixed;
+            position: relative;
             width: 399px;
         }
         .block--work--desc {
