--- a/views/work.hbs
+++ b/views/work.hbs
@@ -13,7 +13,7 @@
         {{#each objects}}
 
             <div class="block--work">
-                <div class="block--work--blur">
+                <div class="block--work--blur ">
                     <div class="block--work--disc">
                         <span>{{country}}</span><br>
                         <span>{{podtype}}</span><br>
@@ -24,7 +24,7 @@
 
                     </div>
                     <div class="block--work--desc">
-                        <span>{{description.[0]}}</span>
+                        <span>{{description.[0]}} . . .</span>
                     </div>
                     <div class="block--work--bottom">
                         <span>{{description.[4]}}</span>
@@ -89,7 +89,7 @@
         position: absolute;
         background: linear-gradient(152deg, #efe7e70f, #f3eeeef5, #ffffff1a);
         height: 2px;
-        margin-top: 10%;
+        margin-top: 8%;
     }
 
     .block--work--bottom {
