--- a/views/lk.hbs
+++ b/views/lk.hbs
@@ -165,7 +165,7 @@
                     <a data-rcm="{{this.id}}" class="btn btn--lk waves-effect">В рекомендуемые</a><br>
 
                     <a data-top="/{{id}}/lk?allow=true" class="btn btn--lk waves-effect waves-teal">Поднять</a><br>
-                    <a href="/{{id}}/edit?allow=true" class="btn btn--lk waves-effect waves-teal">Редактировать</a><br>
+                    <a href="/{{id}}/editwork?allow=true" class="btn btn--lk waves-effect waves-teal">Редактировать</a><br>
                 </div>
             </div>
         {{/each}}
