--- a/views/work.hbs
+++ b/views/work.hbs
@@ -78,7 +78,7 @@
     .block--work--blur {
         position: absolute;
         border-radius: 5px;
-        width: 333px;
+        width: 339px;
         /*border: 3px solid #27e26e;*/
         -webkit-backdrop-filter: blur(3px);
         backdrop-filter: blur(3px)
@@ -98,17 +98,20 @@
         padding: 3px 5px 4px 0;
         color: #444;
         background: aliceblue;
-        position: relative;
-        bottom: 4px;
-        width: 101.5%;
+        /*position: relative;*/
+        /*bottom: 4px;*/
+        /*width: 101.5%;*/
         opacity: 0.8;
         border-radius: 0 0 7px 7px;
     }
-
+    .block--work--bottom > a{
+        color: #3fa7a7;
+    }
     .block--work--desc {
         text-shadow: 0.4px 1px 4px black;
         color: white;
         margin-top: 13px;
+        height: 140px;
         padding: 30px;
         font-variant: oldstyle-nums;
         text-align: justify;
