--- a/views/work.hbs
+++ b/views/work.hbs
@@ -1,5 +1,5 @@
 <div class="parallax-container">
-    <div class="parallax"><img src="/images/2.jpg"></div>
+    <div class="parallax" ><img id="imgParallax" src="/images/2.jpg" alt="WORK IMG"></div>
     <h3>WORK</h3>
 </div>
 
@@ -51,6 +51,3 @@
                 class="large material-icons">arrow_back</i>
             <</a></h5>
 {{/if}}
-<style>
-
-</style>
