--- a/views/workId.hbs
+++ b/views/workId.hbs
@@ -1,6 +1,6 @@
 <div class="parallax-container">
     <div class="parallax par--lk">
-        <img alt="Escort Model" src="https://zodaikapp.s3.us-east-2.amazonaws.com/img/{{object.photo.[0]}}">
+        <img alt="Escort Model" id="imgParallax" src="https://zodaikapp.s3.us-east-2.amazonaws.com/img/{{object.photo.[0]}}">
     </div>
     <h1>{{object.country}}</h1>
 </div>
