--- a/views/index.hbs
+++ b/views/index.hbs
@@ -41,9 +41,9 @@
         <div class="col 14 s12 m4">
             <div class="card sticky-action">
                 <div class="card-image">
-                    <img src="/images/5.jpg">
+                    <img src="/images/5.jpg" alt="WORK">
                     <span class="card-title">Вакансии</span>
-                    <a class="btn-floating halfway-fab waves-effect waves-light orange accent-4 pulse"><i
+                    <a href="/work" class="btn-floating halfway-fab waves-effect waves-light orange accent-4 pulse"><i
                             class="material-icons">star</i></a>
                 </div>
                 <div class="card-content">
