--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <div class="parallax-container">
     <div class="parallax">
-        <img class="imgParralax" id="imgParallax" src="/images/1.jpg"></div>
+        <img class="imgParralax" id="imgParallax" src="/images/1.jpg" alt="Индивидуалки Киев"></div>
     <h3>ZODIAK</h3>
     <h5>The Best Escort Models in Ukraine. Individual escort luxury</h5>
 </div>
@@ -13,7 +13,7 @@
         <div class="col 14 s12 m4">
             <div class="card sticky-action">
                 <div class="card-image">
-                    <img src="/images/9.jpg">
+                    <img src="" data-src='/images/9.jpg' alt="Проститутки Киев">
                     <h2 class="card-title">Эскорт Украина</h2>
                     <a href="/escort" class="btn-floating halfway-fab waves-effect waves-light orange pulse"><i
                             class="material-icons">star_border
@@ -28,7 +28,7 @@
         <div class="col 14 s12 m4">
             <div class="card sticky-action">
                 <div class="card-image">
-                    <img src="/images/6.jpg">
+                    <img src="" data-src='/images/6.jpg' alt="Досуг Киев">
                     <h2 class="card-title">LUX ESCORT</h2>
                     <a href="/lux" class="btn-floating halfway-fab waves-effect waves-light yellow accent-4 pulse"><i
                             class="material-icons">stars</i></a>
@@ -41,7 +41,7 @@
         <div class="col 14 s12 m4">
             <div class="card sticky-action">
                 <div class="card-image">
-                    <img src="/images/5.jpg" alt="WORK">
+                    <img src="" data-src='/images/5.jpg' alt="Работа в Эскорте">
                     <span class="card-title">Вакансии</span>
                     <a href="/work" class="btn-floating halfway-fab waves-effect waves-light orange accent-4 pulse"><i
                             class="material-icons">star</i></a>
