--- a/views/lk.hbs
+++ b/views/lk.hbs
@@ -160,11 +160,11 @@
                     </div>
                 </div>
 
-                <div class="block-btn">
-                    <a data-target="{{this.id}}" class="btn btn--lk waves-effect modal-trigger">Автоподнятиие</a>
+                <div class="block-btn workBtn">
+<!--                    <a data-target="{{this.id}}" class="btn btn--lk waves-effect modal-trigger">Автоподнятиие</a>-->
                     <a data-rcm="/workrcm/{{this.id}}" class="btn btn--lk waves-effect">В рекомендуемые</a><br>
 
-                    <a data-top="/{{id}}/lk?allow=true" class="btn btn--lk waves-effect waves-teal">Поднять</a><br>
+                    <a data-top="/worktop/{{id}}/lk?allow=true" class="btn btn--lk waves-effect waves-teal">Поднять</a><br>
                     <a href="/{{id}}/editwork?allow=true" class="btn btn--lk waves-effect waves-teal">Редактировать</a><br>
                 </div>
             </div>
@@ -178,6 +178,9 @@
 
 
 <style>
+    .workBtn > a{
+        height: 44px;
+    }
     .modal-content > form > button {
         -webkit-appearance: button;
         background: cadetblue;
