--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -42,15 +42,16 @@
     flex-direction: column;
     align-items: center;">
                     <div class="input-field col s8">
-                        <input id="rlogin" type="text" autocomplete="username" name="login" class="validate" required>
+                        <input id="rlogin" type="text" autocomplete="username"
+                              minlength="3" maxlength="15" name="login" class="validate" required>
                         <label for="rlogin">Login</label>
-                        <span class="helper-text" data-error="Введите Login" data-success="Успешно">Введите Login</span>
+                        <span class="helper-text" data-error="Login должен быть не менее 3 и не более 15 символов" data-success="Успешно">Введите Login</span>
                     </div>
                     <div class="input-field col s8">
                         <input id="rpassword" type="password" autocomplete="current-password" name="password"
-                               class="validate" required>
+                               class="validate" required minlength="5" maxlength="56">
                         <label for="rpassword">Пароль</label>
-                        <span class="helper-text" data-error="Введите пароль" data-success="Успешно">Введите пароль</span>
+                        <span class="helper-text" data-error="Пароль должен быть минимум 5 символов" data-success="Успешно">Введите пароль</span>
                     </div>
 <!--                    <div class="input-field col s6">-->
 <!--                        <input id="rpassword2" type="password2" autocomplete="current-password" name="password"-->
@@ -59,9 +60,9 @@
 <!--                        <span class="helper-text" data-error="Повторите пароль" data-success=""></span>-->
 <!--                    </div>-->
                     <div class="input-field col s8">
-                        <input id="remail" type="email" name="email" class="validate" required>
+                        <input id="remail" type="email" name="email" class="validate" required maxlength="70">
                         <label for="remail">Email</label>
-                        <span class="helper-text" data-error="Введите почту" data-success="Успешно">Введите почту</span>
+                        <span class="helper-text" data-error="Введите корректный Email" data-success="Успешно">Введите почту</span>
                     </div>
                     <button class="btn waves-effect waves-light" type="submit" name="action">Зарегитрироваться
                         <i class="material-icons right"></i>
