--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -369,7 +369,7 @@
 
             </p>
         </div>
-        <input type="text" name="id" value="{{object.id}}">
+        <input type="hidden" name="id" value="{{object.id}}">
         {{#if appraisal}}
             <input type="hidden" name="appraisal" value="{{appraisal}}">
         {{/if}}
