--- a/views/lk.hbs
+++ b/views/lk.hbs
@@ -211,6 +211,9 @@
 
 
 <style>
+    .block--lk > .card{
+        margin: 2px 0 7px 0;
+    }
     .cntk > i {
         position: relative;
         left: -7px;
