--- a/views/add.hbs
+++ b/views/add.hbs
@@ -23,11 +23,11 @@
                       data-success="OK">Выбрать город (обязательно)</span>
             </div>
             <div class="input-field col s10">
-                <input id="address" type="text" class="validate validateMain" name="address" required pattern="[A-Za-zА-Яа-яЁё]{3,20}">
+                <input id="address" type="text" class="validate validateMain" name="address" required maxlength="20">
 
                 <label for="address"><i class="fas fa-user-cog"></i>Адрес</label>
                 <span class="helper-text" data-error="Укажите адрес"
-                      data-success="OK">Укажите адрес (обязательно)</span>
+                      data-success="OK">Укажите адрес метро/район/улица (обязательно)</span>
             </div>
 
             <div class="input-field col m4 s8">
